[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/elements/styled/icon_radio.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0588235, 0.2, 0.337255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="CheckButtonStyled" type="PanelContainer"]
margin_right = 50.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 25 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="InnerBorder" type="PanelContainer" parent="."]
margin_right = 50.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="InnerFill" type="PanelContainer" parent="InnerBorder"]
modulate = Color( 0.0392157, 0.145098, 0.247059, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="Box" type="PanelContainer" parent="."]
modulate = Color( 0, 0.329412, 0.639216, 1 )
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="CheckButtonStyled" type="ToolButton" parent="."]
margin_right = 50.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
toggle_mode = true
enabled_focus_mode = 0

[node name="Tween" type="Tween" parent="."]

[connection signal="toggled" from="CheckButtonStyled" to="." method="_on_CheckButtonStyled_toggled"]
